--- a/package.json
+++ b/package.json
@@ -18,17 +18,22 @@
     "@nextui-org/theme": "^2.2.9",
     "@radix-ui/react-slot": "^1.1.0",
     "@tabler/icons-react": "^3.14.0",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/mdx": "^2.0.13",
     "class-variance-authority": "^0.7.0",
+    "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.2.0",
     "framer-motion": "^11.3.30",
+    "gray-matter": "^4.0.3",
     "lucide-react": "^0.436.0",
-    "next": "14.2.7",
+    "next": "^14.2.24",
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "react-tabs": "^6.0.2",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
