--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@nextui-org/system": "^2.2.5",
     "@nextui-org/theme": "^2.2.9",
     "@radix-ui/react-slot": "^1.1.0",
+    "@splinetool/react-spline": "^4.0.0",
+    "@splinetool/runtime": "^1.9.72",
     "@tabler/icons-react": "^3.14.0",
     "@tailwindcss/typography": "^0.5.16",
     "@types/mdx": "^2.0.13",
@@ -27,7 +29,7 @@
     "framer-motion": "^11.3.30",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.436.0",
-    "next": "^14.2.24",
+    "next": "^15.2.0",
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
